对项目进行Lint分析